Workaround for mobile safari not respecting z-index on fixed element

--- a/client/resources/public/wh.css
+++ b/client/resources/public/wh.css
@@ -4835,6 +4835,9 @@ a.navbar-item,
   width: 100%;
   height: 100%; }
 
+.navbar--reset-z-index {
+  z-index: 0; }
+
 .is-full-panel-overlay {
   bottom: 0;
   left: 0;
