--- a/client/styles/_navbar.sass
+++ b/client/styles/_navbar.sass
@@ -402,3 +402,6 @@ $engineers-menu-offset: 654px
 .navbar-menu-close-area
   width: 100%
   height: 100%
+
+.navbar--reset-z-index
+  z-index: 0
